# workflow-quickstart-py

./: .gitignore  Dockerfile  Dockerfile.client  README.md  agentifyme.yml  docker-compose.yml  load.py  pyproject.toml  test.py
src/coffee_shop/: workflows.py
src/local_travel_planner/: tasks.py  utils.py  workflows.py
src/simple_workflow/: workflows.py
