[project]
name = "workflow-quickstart-py"
version = "0.1.2"
description = "Add your description here"
authors = [
    { name = "Arun Reddy", email = "arunreddy.nelakurthi@gmail.com" }
]
dependencies = [
    "agentifyme~=0.1.5",
    "pydantic>=2.9.2",
    "numpy~=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simple_workflow"]
