[project]
name = "workflow-quickstart-py"
version = "0.1.4"
description = "A quickstart project for building workflows with AgentifyMe"
authors = [
    { name = "Arun Reddy", email = "arunreddy.nelakurthi@gmail.com" }
]
dependencies = [
    "agentifyme~=0.1.14",
    "pydantic>=2.9.2",
    "numpy~=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/coffee_shop"]
