[project]
name = "workflow-quickstart-py"
version = "0.1.7"
description = "A quickstart project for building workflows with AgentifyMe"
authors = [
    { name = "Arun Reddy", email = "arunreddy.nelakurthi@gmail.com" }
]
dependencies = [
    "agentifyme>=0.1.47",
    "pydantic>=2.9.2",
    "numpy~=2.1.3",
    "beautifulsoup4>=4.12.3",
    "pinecone-client>=5.0",
    "python-dotenv",
    "joblib",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/local_travel_planner"]
